# knowledge-rag

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  compare_results.py  inference.py  poe.toml  pyproject.toml  pytest.ini  run.sh  run_sample.sh  setup.sh  train.py
analytics/: graph_analyzer.py
src/: config.py
src/dataset/: scene_graphs.py  scene_graphs_sample.py  webqsp.py  webqsp_sample.py
src/dataset/preprocess/: scene_graphs_sample.py  webqsp_sample.py
src/dataset/prompts/: webqsp_template.py
src/dataset/utils/: k_hop.py  personalized_pagerank.py  retrieval.py  retrieval_func_selector.py  retrieval_with_prize_allocation.py
src/model/: __init__.py  gnn.py  graph_llm.py  graph_llm_pt.py  llm.py  pt_llm.py
src/utils/: ckpt.py  evaluate.py
