[project]
name = "knowledge-rag"
version = "0.11.0"
description = "knowledge-rag"
requires-python = ">=3.12"

dependencies = [
    "datasets>=4.1.1",
    "deepsnap",
    "gensim>=4.3.2",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "ogb>=1.3.6",
    "pandas>=2.3.3",
    "pcst-fast>=1.0.10",
    "peft>=0.17.1",
    "protobuf>=6.32.1",
    "scikit-learn>=1.7.1",
    "scipy==1.12",
    "sentencepiece>=0.2.1",
    #"torch-scatter>=2.1.2",
    #"torch-sparse>=0.6.18",
    "torch==2.8.0",
    "transformers>=4.57.0",
    "wandb>=0.22.2",
]

readme = "README.md"

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-env>=1.1.3"
]

[tool.uv.extra-build-dependencies]
torch-sparse = ["torch==2.8.0"]
torch-scatter = ["torch==2.8.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch$prerelease"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = ["pyproject.toml:(?i)version"
                ]
bump_message = "chore(bump): $current_version → $new_version [skip-ci]"

# https://github.com/nat-n/poethepoet
[tool.poe]
include = "poe.toml"

[tool.pdm]
distribution = false

[tool.uv.sources]
deepsnap = { git = "https://github.com/snap-stanford/deepsnap.git" }


[dependency-groups]
dev = [
    "commitizen>=3.13.0",
    "poethepoet>=0.24.4",
    "ipykernel>=6.29.5",
    "ruff>=0.11.13",
]
